# Peano

./: Cargo.toml
crates/api/: Cargo.toml  api.toml
crates/cfapi/: Cargo.toml  api.toml  readme.md
crates/mcapi/: Cargo.toml  api.toml
crates/mcsrvmgr/: Cargo.toml
crates/mcsrvmgr/src/: jre.rs  lib.rs  op.rs
src/: cli.rs  lib.rs  main.rs
